# python-gmp

./: .backportrc.json  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.rst  TODO  _fractions.py  _gmp_fractions.py  _gmp_utils.py  collatz.py  collatz0.py  fmt.c  gmp.c  main.c  meson.build  mpz.h  pyproject.toml  setup.py  utils.c  utils.h  zz.c  zz.h
.github/workflows/: backport.yml  basic.yml  ci.yml  coverage.yml  docs.yml  linter.yml  os.yml  publish.yml  test.yml  wheels.yml
docs/: conf.py  index.rst  requirements.txt
libzz/: zz.c  zz.h
scripts/: bug.py  cibw_before_all.sh  cibw_repair_wheel_command.sh  cibw_repair_wheel_command_windows.sh  dll-importexport.diff  fat_build_fix.diff
tests/: conftest.py  test_api.py  test_functions.py  test_gmp.py  test_memory.py  test_mpq.py  test_mpz.py  test_outofmem.py  test_utils.py  utils.py
