[build-system]
requires = ["setuptools>=77,<=79.0.1", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-gmp"
dynamic = ["version"]
description = "Safe bindings to the GNU GMP library"
keywords = ["gmp", "multiple-precision", "arbitrary-precision", "bignum"]
license = "MIT"
authors = [{name = "Sergey B Kirpichev", email = "skirpichev@gmail.com"}]
maintainers = [{name = "Sergey B Kirpichev", email = "skirpichev@gmail.com"}]
classifiers = ["Development Status :: 3 - Alpha",
               "Intended Audience :: Developers",
               "Intended Audience :: Science/Research",
               "Natural Language :: English",
               "Operating System :: POSIX",
               "Programming Language :: C",
               "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3 :: Only",
               "Programming Language :: Python :: 3.9",
               "Programming Language :: Python :: 3.10",
               "Programming Language :: Python :: 3.11",
               "Programming Language :: Python :: 3.12",
               "Programming Language :: Python :: 3.13",
               "Programming Language :: Python :: 3.14",
               "Programming Language :: Python :: Implementation :: CPython",
               "Programming Language :: Python :: Implementation :: PyPy",
               "Operating System :: Microsoft :: Windows",
               "Operating System :: POSIX",
               "Operating System :: Unix",
               "Operating System :: MacOS",
               "Topic :: Scientific/Engineering :: Mathematics",
               "Topic :: Software Development :: Libraries :: Python Modules"]
requires-python = ">= 3.9"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/diofant/python-gmp"
"Source Code" = "https://github.com/diofant/python-gmp"
"Bug Tracker" = "https://github.com/diofant/python-gmp/issues"
Documentation = "https://python-gmp.readthedocs.io/en/latest/"

[tool.setuptools.dynamic]
version = {attr = "setuptools_scm.get_version"}

[tool.setuptools.package-data]
"*" = ["*.h"]

[project.optional-dependencies]
tests = ["pytest", "hypothesis", "mpmath>=1.4.0a6"]
docs = ["sphinx>=8.2"]
develop = ["python-gmp[tests,docs]", "pre-commit", "pyperf",
           "gmpy2>=2.2; platform_python_implementation!='PyPy'",
           "python-flint>=0.7.0a5"]

[tool.pytest.ini_options]
addopts = "--durations=7"
norecursedirs = ["build", ".eggs", ".git", ".venv", ".hypothesis"]
xfail_strict = true

[tool.ruff]
exclude = [".venv"]
line-length = 79

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "PT", # flake8-pytest-style
    "W",  # pycodestyle warnings
    "Q000",
]
ignore = [
    "PT011",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.cibuildwheel]
enable = "pypy cpython-prerelease cpython-freethreading graalpy"
skip = "*-win32 *-manylinux_i686 *-musllinux_* *-manylinux_armv7l pp*aarch64* gp3*win*"
before-all = "bash scripts/cibw_before_all.sh"
test-extras = "tests"
test-command = "pytest --verbose --capture=no {package}/tests"
repair-wheel-command = "bash scripts/cibw_repair_wheel_command.sh {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
before-all = "msys2 -c scripts/cibw_before_all.sh"
before-build = "pip install wheel delvewheel"
repair-wheel-command = "scripts\\cibw_repair_wheel_command_windows.bat {dest_dir} {wheel}"
